# midtempo-framework

./: .dockerignore  .gitignore  .markdown-link-check.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
build-scripts/: test_red_configs.py  validate_docs.py
commands/: clojure.yml.j2  csharp.yml.j2  dart.yml.j2  elixir.yml.j2  flutter.yml.j2  go.yml.j2  haskell.yml.j2  java-gradle.yml.j2  java-maven.yml.j2  javascript-npm.yml.j2  javascript.yml.j2  kotlin-maven.yml.j2  kotlin.yml.j2  php.yml.j2  python-poetry.yml.j2  python-uv.yml.j2  python.yml.j2  ruby.yml.j2  rust.yml.j2  scala.yml.j2  swift.yml.j2  typescript-npm.yml.j2  typescript.yml.j2
jinja-templates/: TEMPLATE-AUTHORING.md  macros.j2
jinja-templates/agents/: AGENTS.md.j2  GUIDE.md.j2  INSTALL.md.j2  README.md.j2  bugs.md.j2  build-e2e.md.j2  build.md.j2  deliver-green.md.j2  deliver-red.md.j2  deliver.md.j2  documentation.md.j2  (+12 more)
midtempo-framework/: CLAUDE.md  GUIDE.md  INSTALL.md  README.md  bugs.md  build-e2e.md  build.md  deliver-green.md  deliver-red.md  deliver.md  documentation.md  investigate.md  midtempo-framework.yml  refactor.md  refine.md  review-architecture.md  review-code.md  review-e2e.md  review-security.md  review-tests.md  setup.md  write-design.md  write-plan.md  write-tests.md
planning/: EXAMPLE-decisions.md  EXAMPLE-design.md  EXAMPLE-plan.md  EXAMPLE-tests.md
schema/: config.schema.json
scripts/: __init__.py  add_language.py  build_ui_manifest.py  capabilities.py  cli.py  diff_changes.py  filters.py  generate_all.py  generate_docs.py  generate_schema.py  generate_schema_capabilities.py  init_framework.py  instructions.py  language_config.py  paths.py  validate_config.py  validate_markdown.py  validate_templates.py
server/: app.py  models.py
tests/: __init__.py  conftest.py  test_build_ui_manifest.py  test_capabilities.py  test_capabilities_backward_compat.py  test_conditional_command_rendering.py  test_config_enrichment.py  test_config_factory.py  test_config_schema_validation.py  test_config_validation.py  test_ctx_undefined_bug.py  test_dialog_macro.py  test_diff_changes.py  test_fixtures_configs.py  test_generate_all.py  test_generate_docs.py  test_generate_docs_import.py  test_generate_schema.py  test_generate_schema_capabilities.py  test_generated_schema_valid.py  test_init_framework.py  test_instructions.py  test_instructions_filter.py  test_integration.py  test_integration_multi_language.py  test_macros.py  test_markdown_validation.py  test_schema_registry_sync.py  test_security_config_model.py  test_security_skip_logic.py  test_server_app.py  test_server_docs.py  test_server_integration.py  test_server_models.py  test_setup.py  test_smart_context.py  test_template_rendering.py  test_template_syntax.py  test_ui_about_modal.py  test_ui_command_modal.py  (+14 more)
(+74 files in other folders)
